--- a/p8105_mtp_lvr2115.md
+++ b/p8105_mtp_lvr2115.md
@@ -3,3 +3,37 @@ p8105_mtp_lvr2115
 Laura Robles-Torres
 2023-10-18
 
+# Introduction
+
+### These data are from Change of Address (COAs) forms received by the United States Post Office in New York City between 2018 and 2022. It includes the total number of COAs to and from each NYC zip code for each month of those 5 years. These COAs are filed by people who are moving to ensure that mail is delivered to their new address.
+
+In each sheet, the TOTAL PERM IN and TOTAL PERM OUT indicate the total
+number of permanent address changes going into and out of each ZIP code.
+
+NYC is divided into five boroughs. Each of these boroughs is it’s own
+county, and in some cases the borough name and county name differ; for
+example, Manhattan is New York County. Moreover, boroughs are divided
+into neighborhoods. COA data provided by USPS may not accurately reflect
+NYC’s counties, boroughs, and neighborhoods, and a supplementary dataset
+including these is available here.
+
+``` r
+zipcodes = 
+  read_csv("./zip codes.csv") |>
+  janitor::clean_names()
+```
+
+    ## Rows: 324 Columns: 7
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr (4): County Name, County Code, File Date, Neighborhood
+    ## dbl (3): State FIPS, County FIPS, ZipCode
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+coa = 
+  readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx") |>
+  janitor::clean_names()
+```
