--- a/p8105_mtp_lvr2115.md
+++ b/p8105_mtp_lvr2115.md
@@ -20,7 +20,14 @@ including these is available here.
 ``` r
 zipcodes = 
   read_csv("./zip codes.csv") |>
-  janitor::clean_names()
+  janitor::clean_names() |>
+  mutate(
+    borough = recode(county_name, 
+                     "Bronx" = "The Bronx",
+                     "Kings" = "Brooklyn",
+                     "New York" = "Manhattan",
+                     "Richmond" = "Staten Island")
+)
 ```
 
     ## Rows: 324 Columns: 7
@@ -35,5 +42,9 @@ zipcodes =
 ``` r
 coa = 
   readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx") |>
-  janitor::clean_names()
+  janitor::clean_names() |> 
+  separate(month, into = c("year", "month_num", "day"), convert = TRUE)
 ```
+
+Also, create a net_change variable by subtracting outbound COAs from
+inbound COAs.
