repeat import/clean for rest of COA sheets apart from year 2018 and combine these dataframes together for a combined COA dataframe

--- a/p8105_mtp_lvr2115.md
+++ b/p8105_mtp_lvr2115.md
@@ -19,14 +19,14 @@ including these is available here.
 
 ``` r
 zipcodes = 
-  read_csv("./zip codes.csv") |>
-  janitor::clean_names() |>
+  read_csv("./zip codes.csv") |> #import dataset
+  janitor::clean_names() |> #clean var names
   mutate(
     borough = recode(county_name, 
                      "Bronx" = "The Bronx",
                      "Kings" = "Brooklyn",
                      "New York" = "Manhattan",
-                     "Richmond" = "Staten Island")
+                     "Richmond" = "Staten Island") #create borough var based on county
 )
 ```
 
@@ -40,11 +40,43 @@ zipcodes =
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
 ``` r
-coa = 
-  readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx") |>
-  janitor::clean_names() |> 
-  separate(month, into = c("year", "month_num", "day"), convert = TRUE)
+coa_2018 = 
+  readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2018") |> #import dataset
+  janitor::clean_names() |> #clean var names
+  separate(month, into = c("year", "month_num", "day"), convert = TRUE) |> #create year var
+   mutate(
+    net_change = total_perm_in - total_perm_out) #Create net_change var 
+
+coa_2019 = 
+  readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2019") |> #import dataset
+  janitor::clean_names() |> #clean var names
+  separate(month, into = c("year", "month_num", "day"), convert = TRUE) |> #create year var
+   mutate(
+    net_change = total_perm_in - total_perm_out) #Create net_change var 
+
+coa_2020 = 
+  readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2020") |> #import dataset
+  janitor::clean_names() |> #clean var names
+  separate(month, into = c("year", "month_num", "day"), convert = TRUE) |> #create year var
+   mutate(
+    net_change = total_perm_in - total_perm_out) #Create net_change var 
+
+coa_2021 = 
+  readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2021") |> #import dataset
+  janitor::clean_names() |> #clean var names
+  separate(month, into = c("year", "month_num", "day"), convert = TRUE) |> #create year var
+   mutate(
+    net_change = total_perm_in - total_perm_out) #Create net_change var 
+
+coa_2022 = 
+  readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2022") |> #import dataset
+  janitor::clean_names() |> #clean var names
+  separate(month, into = c("year", "month_num", "day"), convert = TRUE) |> #create year var
+   mutate(
+    net_change = total_perm_in - total_perm_out) #Create net_change var 
 ```
 
-Also, create a net_change variable by subtracting outbound COAs from
-inbound COAs.
+``` r
+combined_coa =
+    bind_rows(coa_2018, coa_2019, coa_2020,coa_2021,coa_2022)
+```
