Renamed zipcode var to match, merged COAs and zipcodes dataframes, created tables showing most common values of cities in both Manhattan and Queens

--- a/p8105_mtp_lvr2115.md
+++ b/p8105_mtp_lvr2115.md
@@ -78,5 +78,157 @@ coa_2022 =
 
 ``` r
 combined_coa =
-    bind_rows(coa_2018, coa_2019, coa_2020,coa_2021,coa_2022)
+    bind_rows(coa_2018, coa_2019, coa_2020,coa_2021,coa_2022) |>
+  rename("zip_code"="zipcode") #combine COA data from all sheets belonging to different years 
 ```
+
+``` r
+merged_coazips = 
+  left_join(zipcodes, combined_coa, by="zip_code") #merge COA with zipcode datasets 
+```
+
+    ## Warning in left_join(zipcodes, combined_coa, by = "zip_code"): Detected an unexpected many-to-many relationship between `x` and `y`.
+    ## ℹ Row 1 of `x` matches multiple rows in `y`.
+    ## ℹ Row 88 of `y` matches multiple rows in `x`.
+    ## ℹ If a many-to-many relationship is expected, set `relationship =
+    ##   "many-to-many"` to silence this warning.
+
+``` r
+str(merged_coazips) 
+```
+
+    ## tibble [12,168 × 15] (S3: tbl_df/tbl/data.frame)
+    ##  $ county_name   : chr [1:12168] "Bronx" "Bronx" "Bronx" "Bronx" ...
+    ##  $ state_fips    : num [1:12168] 36 36 36 36 36 36 36 36 36 36 ...
+    ##  $ county_code   : chr [1:12168] "005" "005" "005" "005" ...
+    ##  $ county_fips   : num [1:12168] 36005 36005 36005 36005 36005 ...
+    ##  $ zip_code      : num [1:12168] 10451 10451 10451 10451 10451 ...
+    ##  $ file_date     : chr [1:12168] "07/25/2007" "07/25/2007" "07/25/2007" "07/25/2007" ...
+    ##  $ neighborhood  : chr [1:12168] "High Bridge and Morrisania" "High Bridge and Morrisania" "High Bridge and Morrisania" "High Bridge and Morrisania" ...
+    ##  $ borough       : chr [1:12168] "The Bronx" "The Bronx" "The Bronx" "The Bronx" ...
+    ##  $ year          : int [1:12168] 2018 2018 2018 2018 2018 2018 2018 2018 2018 2018 ...
+    ##  $ month_num     : int [1:12168] 1 2 3 4 5 6 7 8 9 10 ...
+    ##  $ day           : int [1:12168] 1 1 1 1 1 1 1 1 1 1 ...
+    ##  $ city          : chr [1:12168] "BRONX" "BRONX" "BRONX" "BRONX" ...
+    ##  $ total_perm_out: num [1:12168] 263 197 219 207 240 220 215 238 209 219 ...
+    ##  $ total_perm_in : num [1:12168] 193 172 204 180 228 249 264 277 268 217 ...
+    ##  $ net_change    : num [1:12168] -70 -25 -15 -27 -12 29 49 39 59 -2 ...
+
+The combined COA dataset `combined_coa` has 11845 observations and 8
+variables and tells us about the total perm in and total perm out and
+net change in COAs for a given year from years 2018 to 2022.
+
+In the merged dataset total, there are 320 zipcodes found and 43 unique
+neighborhoods.
+
+This table shows the most common values of city in the borough of
+Manhattan.
+
+``` r
+merged_coazips |> 
+  filter(borough %in% c("Manhattan")) |>
+  group_by(borough) |> 
+  count(city) |> 
+  mutate(rank = min_rank(desc(n))) |> 
+  arrange(desc(n)) |>
+  knitr::kable()
+```
+
+| borough   | city             |    n | rank |
+|:----------|:-----------------|-----:|-----:|
+| Manhattan | NEW YORK         | 3477 |    1 |
+| Manhattan | BRONX            |   60 |    2 |
+| Manhattan | BROOKLYN         |   59 |    3 |
+| Manhattan | NA               |   57 |    4 |
+| Manhattan | CANAL STREET     |    4 |    5 |
+| Manhattan | ROOSEVELT ISL    |    4 |    5 |
+| Manhattan | ROOSEVELT ISLAND |    4 |    5 |
+| Manhattan | BOWLING GREEN    |    1 |    8 |
+| Manhattan | BROOKLYN HEIGHTS |    1 |    8 |
+| Manhattan | NYC              |    1 |    8 |
+| Manhattan | SECHEDATY        |    1 |    8 |
+| Manhattan | WALL STREET      |    1 |    8 |
+
+This table shows the most common values of city in the borough of
+Queens.
+
+``` r
+merged_coazips |> 
+  filter(borough %in% c("Queens")) |>
+  group_by(borough) |> 
+  count(city) |> 
+  mutate(rank = min_rank(desc(n))) |> 
+  arrange(desc(n)) |>
+  knitr::kable()
+```
+
+| borough | city                |   n | rank |
+|:--------|:--------------------|----:|-----:|
+| Queens  | JAMAICA             | 372 |    1 |
+| Queens  | FLUSHING            | 309 |    2 |
+| Queens  | ASTORIA             | 230 |    3 |
+| Queens  | QUEENS VILLAGE      | 165 |    4 |
+| Queens  | BAYSIDE             | 135 |    5 |
+| Queens  | LONG ISLAND CITY    | 120 |    6 |
+| Queens  | EAST ELMHURST       | 117 |    7 |
+| Queens  | OZONE PARK          | 116 |    8 |
+| Queens  | FRESH MEADOWS       | 107 |    9 |
+| Queens  | FAR ROCKAWAY        | 102 |   10 |
+| Queens  | LITTLE NECK         |  79 |   11 |
+| Queens  | RIDGEWOOD           |  70 |   12 |
+| Queens  | FLORAL PARK         |  68 |   13 |
+| Queens  | ELMHURST            |  63 |   14 |
+| Queens  | KEW GARDENS         |  62 |   15 |
+| Queens  | BELLEROSE           |  60 |   16 |
+| Queens  | BROOKLYN            |  60 |   16 |
+| Queens  | COLLEGE POINT       |  60 |   16 |
+| Queens  | CORONA              |  60 |   16 |
+| Queens  | HOWARD BEACH        |  60 |   16 |
+| Queens  | REGO PARK           |  60 |   16 |
+| Queens  | FOREST HILLS        |  59 |   22 |
+| Queens  | HOLLIS              |  59 |   22 |
+| Queens  | ROSEDALE            |  59 |   22 |
+| Queens  | WOODHAVEN           |  59 |   22 |
+| Queens  | WOODSIDE            |  59 |   22 |
+| Queens  | CAMBRIA HEIGHTS     |  58 |   27 |
+| Queens  | MASPETH             |  58 |   27 |
+| Queens  | MIDDLE VILLAGE      |  58 |   27 |
+| Queens  | SAINT ALBANS        |  57 |   30 |
+| Queens  | ARVERNE             |  56 |   31 |
+| Queens  | JACKSON HEIGHTS     |  56 |   31 |
+| Queens  | WHITESTONE          |  55 |   33 |
+| Queens  | RICHMOND HILL       |  54 |   34 |
+| Queens  | GLEN OAKS           |  52 |   35 |
+| Queens  | SUNNYSIDE           |  51 |   36 |
+| Queens  | ROCKAWAY BEACH      |  49 |   37 |
+| Queens  | SOUTH OZONE PARK    |  49 |   37 |
+| Queens  | BREEZY POINT        |  47 |   39 |
+| Queens  | SOUTH RICHMOND HILL |  47 |   39 |
+| Queens  | ROCKAWAY PARK       |  40 |   41 |
+| Queens  | DOUGLASTON          |  39 |   42 |
+| Queens  | OAKLAND GARDENS     |  38 |   43 |
+| Queens  | SPRINGFIELD GARDENS |  30 |   44 |
+| Queens  | LAURELTON           |  28 |   45 |
+| Queens  | LONG IS CITY        |  19 |   46 |
+| Queens  | BRIARWOOD           |  16 |   47 |
+| Queens  | NA                  |  16 |   47 |
+| Queens  | ROCKAWAY POINT      |  13 |   49 |
+| Queens  | BELLE HARBOR        |  11 |   50 |
+| Queens  | GLENDALE            |  11 |   50 |
+| Queens  | S RICHMOND HL       |   9 |   52 |
+| Queens  | QUEENS VLG          |   8 |   53 |
+| Queens  | S OZONE PARK        |   8 |   53 |
+| Queens  | BAYSIDE HILLS       |   6 |   55 |
+| Queens  | BROAD CHANNEL       |   5 |   56 |
+| Queens  | BEECHHURST          |   4 |   57 |
+| Queens  | KEW GARDENS HILLS   |   4 |   57 |
+| Queens  | NEPONSIT            |   4 |   57 |
+| Queens  | AUBURNDALE          |   2 |   60 |
+| Queens  | BELLEROSE MANOR     |   2 |   60 |
+| Queens  | SPRNGFLD GDNS       |   2 |   60 |
+| Queens  | CALVERTON           |   1 |   63 |
+| Queens  | CAMBRIA HTS         |   1 |   63 |
+| Queens  | JACKSON HTS         |   1 |   63 |
+| Queens  | MIDDLE VLG          |   1 |   63 |
+| Queens  | NEW YORK CITY       |   1 |   63 |
+| Queens  | ST ALBANS           |   1 |   63 |
