--- a/p8105_mtp_lvr2115.Rmd
+++ b/p8105_mtp_lvr2115.Rmd
@@ -11,7 +11,6 @@ library(tidyverse)
 library(dplyr)
 ```
 
-
 # Introduction
 
 ##Problem 1
@@ -123,9 +122,36 @@ This table shows the average of net_change in each borough and year.
 
 ```{r}
 merged_coazips |>
-  group_by(borough, year, net_change) |>
+  group_by(year, borough) |>
   summarize(mean_net_change = mean(net_change)) |>
   knitr::kable(digits = 2)
 ```
 
+This table shows, across all observed data, the five lowest values of net_change. This table should include ZIP code, neighborhood, and the year and month.
+```{r}
+merged_coazips |>
+  group_by(zip_code) |>
+  filter(min_rank(net_change) < 6) |>
+  arrange(net_change) |>
+  knitr::kable()
+```
+
+This table shows, across data observed before 2020, the five highest values of net_change. This table should include ZIP code, neighborhood, and the year and month.
+
+```{r}
+merged_coazips |>
+  filter(year < 2020) |>
+  group_by(net_change, zip_code) |>
+  arrange(desc(net_change)) |>
+  knitr::kable()
+```
+This plot shows neighborhood-level average net_change values (i.e. averaging across ZIP codes within neighborhoods) against month over all five years. Your plot should facilitate comparisons across boroughs.
+
+```{r}
+merged_coazips |>
+  group_by(neighborhood) |>
+  mutate(
+    mean_netchange = mean(net_change, na.rm = TRUE)) |> 
+  ggplot(aes(x = month_num, y = centered_netchange, color = borough)) 
+```
 
